--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,18 @@
-html, body {
+html, body, #root {
   height: 100%;
   width: 100%;
+  overflow: auto;
   box-sizing: border-box;
+  margin: 0;
 }
-body * {
+body {
+  font-family: Roboto, sans-serif;
+}
+ul {
+  margin: 0;
+  padding: 0;
+}
+#root * {
   box-sizing: inherit;
 }
 .red {
